@@ -1,5 +1,8 @@
 2004-12-02  Jim Blandy  <jimb@redhat.com>
 
+	* thread-db.c (thread_db_break_program): New function.
+	(thread_db_attach): Register it as the 'break_program' method.
+
 	* ptrace-target.c (kill_lwp): Produce debugging output.
 
 	* lwp-pool.c (check_stop_pending): lwp_state_stopped_interesting
